Fix Folder Structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delnard Cantor</title>
-  <link rel="icon" href="DRC_Logo.svg">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="images/DRC_Logo.svg">
+  <link rel="stylesheet" href="css/styles.css">
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -45,11 +45,11 @@
         <a href="#contact" class="btn-noFill">Download CV</a>
       </div>
       <div class="about-image">
-        <img src="DRC_Image.svg" alt="Delnard Cantor Image">
+        <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
       </div>
     </div>
   </section>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
