--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <header>
@@ -49,6 +50,27 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="containerFooter">
+      <div class="footer-col">
+        <div class="footer-logo">
+          <h3 style="font-weight:bold; letter-spacing: 1px;">MADE WITH 🤍 BY DELNARD</h3>
+        </div>
+      </div>
+      <div class="footer-col">
+        <div class="social-links">
+          <a href="https://www.facebook.com/delnard.cantor/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://twitter.com/cantordelnard" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://www.instagram.com/delnardcantor_/" target="_blank""><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/delnard-cantor-391054143/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="footer-col">
+        <h4><span style="font-weight:bold; letter-spacing: 1px;">©2025</span>DELNARDCANTOR</h4>
+      </div>
+    </div>  
+  </footer>
 
   <script src="js/script.js"></script>
 </body>
