Added Tech Stack Section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delnard Cantor</title>
-  <link rel="icon" href="images/DRC_Logo.svg">
+  <link rel="icon" href="images/DRC_LogoTwo.svg">
   <link rel="stylesheet" href="css/styles.css">
   <link
     rel="stylesheet"
@@ -48,6 +48,37 @@
       <div class="about-image">
         <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
       </div>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h2>TECH STACK'S</h2>
+    <div class="skills-grid">
+      <!-- Programming Languages -->
+      <div class="skill-box">Python</div>
+      <div class="skill-box">PHP</div>
+      <div class="skill-box">Java</div>
+      <div class="skill-box">C#</div>
+      <div class="skill-box">JavaScript</div>
+      <div class="skill-box">VB.NET</div>
+
+      <!-- Web Development -->
+      <div class="skill-box">HTML</div>
+      <div class="skill-box">CSS</div>
+      <div class="skill-box">XML</div>
+
+      <!-- Databases -->
+      <div class="skill-box">MySQL</div>
+      <div class="skill-box">Firebase</div>
+
+      <!-- Design Tools -->
+      <div class="skill-box">Figma</div>
+      <div class="skill-box">Canva</div>
+      <div class="skill-box">Photoshop</div>
+
+      <!-- Productivity Tools -->
+      <div class="skill-box">MS Office</div>
+      <div class="skill-box">Packet Tracer</div>
     </div>
   </section>
 
