Modifed Tech Stack Section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
       <!-- Productivity Tools -->
       <div class="skill-box">MS Office</div>
       <div class="skill-box">Packet Tracer</div>
+      <div class="skill-box">Wordpress</div>
+    </div>
+  </section>
+
+  <section id="about" class="about-section">
+    <div class="about-content">
+      <div class="about-text">
+        <h1>HI, I'M DELNARD CANTOR</h1>
+        <p>
+          IT Student | Specializing in Web Development and Data Analysis
+        </p>
+        <p>
+          A detail-oriented IT student passionate about innovation, problem-solving, and emerging technologies. Experienced in collaboration and leadership, with a forward-thinking approach to challenges.
+        </p>
+        <a href="#contact" class="btn">Get in Touch</a>
+        <a href="#contact" class="btn-noFill">Download CV</a>
+      </div>
+      <div class="about-image">
+        <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
+      </div>
     </div>
   </section>
 
