Added Experience Section

--- a/index.html
+++ b/index.html
@@ -83,24 +83,38 @@
     </div>
   </section>
 
-  <section id="about" class="about-section">
-    <div class="about-content">
-      <div class="about-text">
-        <h1>HI, I'M DELNARD CANTOR</h1>
-        <p>
-          IT Student | Specializing in Web Development and Data Analysis
-        </p>
-        <p>
-          A detail-oriented IT student passionate about innovation, problem-solving, and emerging technologies. Experienced in collaboration and leadership, with a forward-thinking approach to challenges.
-        </p>
-        <a href="#contact" class="btn">Get in Touch</a>
-        <a href="#contact" class="btn-noFill">Download CV</a>
-      </div>
-      <div class="about-image">
-        <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
+  <section id="experience">
+  <h2>EXPERIENCE</h2>
+  <div class="experience-timeline">
+    <!-- Experience Item 1 -->
+    <div class="experience-item">
+      <div class="experience-content">
+        <h3>SURVEY ENUMERATOR AND ENCODER</h3>
+        <p class="company">SPES | City Government of Pasig</p>
+        <p class="experience-date">Dec 2024 - Dec 2024</p>
+        <ul>
+          <li>Developed and maintained company website.</li>
+          <li>Collaborated with designers to implement UI/UX improvements.</li>
+        </ul>
       </div>
     </div>
-  </section>
+
+    <!-- Experience Item 2 -->
+    <div class="experience-item">
+      <div class="experience-content">
+        <h3>WEB DEVELOPER INTERN</h3>
+        <p class="company">The Umonics Method</p>
+        <p class="experience-date">Sep 2024 - Sep 2024</p>
+        <ul>
+          <li>Designed and implemented scalable backend systems.</li>
+          <li>Worked with cross-functional teams to deliver projects on time.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Add more experience items as needed -->
+  </div>
+</section>
 
   <footer class="footer">
     <div class="containerFooter">
