Added Project Section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           A detail-oriented IT student passionate about innovation, problem-solving, and emerging technologies. Experienced in collaboration and leadership, with a forward-thinking approach to challenges.
         </p>
         <a href="#contact" class="btn">Get in Touch</a>
-        <a href="#contact" class="btn-noFill">Download CV</a>
+        <a href="https://drive.google.com/file/d/1XGsgCfE4MUHqqaCSMZRstAQtrX7Ssvc9/view?usp=sharing" target="_blank" class="btn-noFill">Download CV</a>
       </div>
       <div class="about-image">
         <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
@@ -93,8 +93,8 @@
         <p class="company">SPES | City Government of Pasig</p>
         <p class="experience-date">Dec 2024 - Dec 2024</p>
         <ul>
-          <li>Developed and maintained company website.</li>
-          <li>Collaborated with designers to implement UI/UX improvements.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.</li>
         </ul>
       </div>
     </div>
@@ -106,13 +106,78 @@
         <p class="company">The Umonics Method</p>
         <p class="experience-date">Sep 2024 - Sep 2024</p>
         <ul>
-          <li>Designed and implemented scalable backend systems.</li>
-          <li>Worked with cross-functional teams to deliver projects on time.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.</li>
         </ul>
       </div>
     </div>
 
     <!-- Add more experience items as needed -->
+  </div>
+</section>
+
+  <section id="projects">
+  <h2>PROJECTS</h2>
+  <div class="projects-grid">
+    <!-- Project 1 -->
+    <div class="project-card">
+      <img src="images/project1.svg" alt="Project 1" class="project-image">
+      <div class="project-content">
+        <h3>Delnard's Portfolio</h3>
+        <p class="project-description">Personal Project</p>
+        <p class="project-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
+        </p>
+        <div class="project-tools">
+          <div class="tool-box">HTML</div>
+          <div class="tool-box">CSS</div>
+          <div class="tool-box">JavaScript</div>
+          <div class="tool-box">Netlify</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-card">
+      <img src="images/project2.svg" alt="Project 2" class="project-image">
+      <div class="project-content">
+        <h3>PLP System</h3>
+        <p class="project-description">Capstone Project</p>
+        <p class="project-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
+        </p>
+        <div class="project-tools">
+          <div class="tool-box">Python</div>
+          <div class="tool-box">Machine Learning</div>
+          <div class="tool-box">MySQL</div>
+          <div class="tool-box">HTML</div>
+          <div class="tool-box">CSS</div>
+          <div class="tool-box">JavaScript</div>
+          <div class="tool-box">Heroku</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project-card">
+      <img src="images/project3.svg" alt="Project 2" class="project-image">
+      <div class="project-content">
+        <h3>Delnard's Photography</h3>
+        <p class="project-description">Casestudy Project</p>
+        <p class="project-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
+        </p>
+        <div class="project-tools">
+          <div class="tool-box">HTML</div>
+          <div class="tool-box">CSS</div>
+          <div class="tool-box">JavaScript</div>
+          <div class="tool-box">Bootstrap</div>
+          <div class="tool-box">Firebase</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Add more projects as needed -->
   </div>
 </section>
 
