Modified Project Section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div class="projects-grid">
     <!-- Project 1 -->
     <div class="project-card">
-      <img src="images/project1.svg" alt="Project 1" class="project-image">
+      <img src="images/whiteGrid.svg" alt="Project 1" class="project-image">
       <div class="project-content">
         <h3>Delnard's Portfolio</h3>
         <p class="project-description">Personal Project</p>
@@ -139,7 +139,7 @@
 
     <!-- Project 2 -->
     <div class="project-card">
-      <img src="images/project2.svg" alt="Project 2" class="project-image">
+      <img src="images/whiteGrid.svg" alt="Project 2" class="project-image">
       <div class="project-content">
         <h3>PLP System</h3>
         <p class="project-description">Capstone Project</p>
@@ -160,7 +160,7 @@
 
     <!-- Project 3 -->
     <div class="project-card">
-      <img src="images/project3.svg" alt="Project 2" class="project-image">
+      <img src="images/whiteGrid.svg" alt="Project 2" class="project-image">
       <div class="project-content">
         <h3>Delnard's Photography</h3>
         <p class="project-description">Casestudy Project</p>
@@ -179,6 +179,10 @@
 
     <!-- Add more projects as needed -->
   </div>
+</section>
+
+<section id="contact">
+  <h2>CONTACT</h2>
 </section>
 
   <footer class="footer">
