--- a/index.html
+++ b/index.html
@@ -13,198 +13,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <a href="#">DRC</a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <div class="menu-toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </nav>
-  </header>
 
-  <section id="about" class="about-section">
-    <div class="about-content">
-      <div class="about-text">
-        <h1>HI, I'M DELNARD CANTOR</h1>
-        <p>
-          IT Student | Specializing in Web Development and Data Analysis
-        </p>
-        <p>
-          A detail-oriented IT student passionate about innovation, problem-solving, and emerging technologies. Experienced in collaboration and leadership, with a forward-thinking approach to challenges.
-        </p>
-        <a href="#contact" class="btn">Get in Touch</a>
-        <a href="https://drive.google.com/file/d/1XGsgCfE4MUHqqaCSMZRstAQtrX7Ssvc9/view?usp=sharing" target="_blank" class="btn-noFill">Download CV</a>
-      </div>
-      <div class="about-image">
-        <img src="images/DRC_Image.svg" alt="Delnard Cantor Image">
-      </div>
-    </div>
-  </section>
-
-  <section id="skills">
-    <h2>TECH STACK'S</h2>
-    <div class="skills-grid">
-      <!-- Programming Languages -->
-      <div class="skill-box">Python</div>
-      <div class="skill-box">PHP</div>
-      <div class="skill-box">Java</div>
-      <div class="skill-box">C#</div>
-      <div class="skill-box">JavaScript</div>
-      <div class="skill-box">VB.NET</div>
-
-      <!-- Web Development -->
-      <div class="skill-box">HTML</div>
-      <div class="skill-box">CSS</div>
-      <div class="skill-box">XML</div>
-
-      <!-- Databases -->
-      <div class="skill-box">MySQL</div>
-      <div class="skill-box">Firebase</div>
-
-      <!-- Design Tools -->
-      <div class="skill-box">Figma</div>
-      <div class="skill-box">Canva</div>
-      <div class="skill-box">Photoshop</div>
-
-      <!-- Productivity Tools -->
-      <div class="skill-box">MS Office</div>
-      <div class="skill-box">Packet Tracer</div>
-      <div class="skill-box">Wordpress</div>
-    </div>
-  </section>
-
-  <section id="experience">
-  <h2>EXPERIENCE</h2>
-  <div class="experience-timeline">
-    <!-- Experience Item 1 -->
-    <div class="experience-item">
-      <div class="experience-content">
-        <h3>SURVEY ENUMERATOR AND ENCODER</h3>
-        <p class="company">SPES | City Government of Pasig</p>
-        <p class="experience-date">Dec 2024 - Dec 2024</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Experience Item 2 -->
-    <div class="experience-item">
-      <div class="experience-content">
-        <h3>WEB DEVELOPER INTERN</h3>
-        <p class="company">The Umonics Method</p>
-        <p class="experience-date">Sep 2024 - Sep 2024</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Add more experience items as needed -->
-  </div>
+<section id="maintenance">
+  <h1>DELNARD'S PORTFOLIO</h1>
+  <h2 class="maintenance-bold">Exciting things are coming!</h2>
+  <h2>This website is still under development.</h2>
+  <h2>Check back soon!</h2>
+  <h2 class="maintenance-space">©2025DELNARDCANTOR</h2>
 </section>
-
-  <section id="projects">
-  <h2>PROJECTS</h2>
-  <div class="projects-grid">
-    <!-- Project 1 -->
-    <div class="project-card">
-      <img src="images/redGrid.svg" alt="Project 1" class="project-image">
-      <div class="project-content">
-        <h3>Delnard's Portfolio</h3>
-        <p class="project-description">Personal Project</p>
-        <p class="project-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
-        </p>
-        <div class="project-tools">
-          <div class="tool-box">HTML</div>
-          <div class="tool-box">CSS</div>
-          <div class="tool-box">JavaScript</div>
-          <div class="tool-box">Netlify</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Project 2 -->
-    <div class="project-card">
-      <img src="images/redGrid.svg" alt="Project 2" class="project-image">
-      <div class="project-content">
-        <h3>PLP System</h3>
-        <p class="project-description">Capstone Project</p>
-        <p class="project-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
-        </p>
-        <div class="project-tools">
-          <div class="tool-box">Python</div>
-          <div class="tool-box">Machine Learning</div>
-          <div class="tool-box">MySQL</div>
-          <div class="tool-box">HTML</div>
-          <div class="tool-box">CSS</div>
-          <div class="tool-box">JavaScript</div>
-          <div class="tool-box">Heroku</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Project 3 -->
-    <div class="project-card">
-      <img src="images/redGrid.svg" alt="Project 2" class="project-image">
-      <div class="project-content">
-        <h3>Delnard's Photography</h3>
-        <p class="project-description">Casestudy Project</p>
-        <p class="project-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur.
-        </p>
-        <div class="project-tools">
-          <div class="tool-box">HTML</div>
-          <div class="tool-box">CSS</div>
-          <div class="tool-box">JavaScript</div>
-          <div class="tool-box">Bootstrap</div>
-          <div class="tool-box">Firebase</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Add more projects as needed -->
-  </div>
-</section>
-
-<section id="contact">
-  <h2>CONTACT</h2>
-</section>
-
-  <footer class="footer">
-    <div class="containerFooter">
-      <div class="footer-col">
-        <div class="footer-logo">
-          <h3 style="font-weight:bold; letter-spacing: 1px;">MADE WITH 🤍 BY DELNARD</h3>
-        </div>
-      </div>
-      <div class="footer-col">
-        <div class="social-links">
-          <a href="https://www.facebook.com/delnard.cantor/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="https://twitter.com/cantordelnard" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://www.instagram.com/delnardcantor_/" target="_blank""><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/delnard-cantor-391054143/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-        </div>
-      </div>
-      <div class="footer-col">
-        <h4><span style="font-weight:bold; letter-spacing: 1px;">©2025</span>DELNARDCANTOR</h4>
-      </div>
-    </div>  
-  </footer>
 
   <script src="js/script.js"></script>
 </body>
