Modified Development Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<section id="maintenance">
+<section id="maintenance" class="animate__animated animate__fadeInUpBig">
   <h1>DELNARD'S PORTFOLIO</h1>
   <h2 class="maintenance-bold">Exciting things are coming!</h2>
   <h2>This website is still under development.</h2>
