Updated Contact Section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <h2 class="maintenance-space">©2025DELNARDCANTOR</h2>
 </section>
 
+<section id="box">
+  <div class="wrapper">
+    <h1>HELLO WORLD!</h1>
+  </div>
+</section>
+
   <script src="js/script.js"></script>
 </body>
 </html>
