--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header>
@@ -183,6 +184,38 @@
 
 <section id="contact">
   <h2>CONTACT</h2>
+  <div class="contact-container">
+    <!-- Contact Form -->
+    <div class="contact-form">
+      <form action="#" method="POST">
+        <!-- First Name and Last Name in One Line -->
+        <div class="name-group">
+          <input type="text" id="first-name" name="first-name" placeholder="First Name" required>
+          <input type="text" id="last-name" name="last-name" placeholder="Last Name" required>
+        </div>
+        <div class="form-group">
+          <input type="email" id="email" name="email" placeholder="Email Address" required>
+        </div>
+        <div class="form-group">
+          <input type="text" id="subject" name="subject" placeholder="Subject" required>
+        </div>
+        <div class="form-group">
+          <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
+        </div>
+        <button type="submit" class="submit-btn">Send Message</button>
+      </form>
+    </div>
+
+    <!-- Contact Information -->
+    <div class="contact-info">
+      <h3>Get in Touch</h3>
+      <p>Feel free to reach out for collaborations or inquiries!</p>
+      <ul>
+        <li><strong>Email:</strong> delnardcantor1@gmail.com</li>
+        <li><strong>Phone:</strong> +63 992 604 1809</li>
+      </ul>
+    </div>
+  </div>
 </section>
 
   <footer class="footer">
