Added Education Section

--- a/main.html
+++ b/main.html
@@ -54,6 +54,55 @@
     </div>
   </section>
 
+    <section id="education">
+  <h2>EDUCATION</h2>
+  <div class="education-container">
+    <!-- Education Item 1 -->
+    <div class="education-card">
+      <div class="education-header">
+        <div class="school-logo">
+          <img src="images/DRC_Logo.svg" alt="Pamantasan ng Lungsod ng Pasig">
+        </div>
+        <div class="education-details">
+          <h3>Bachelor of Science in Information Technology</h3>
+          <p class="institution">Pamantasan ng Lungsod ng Pasig</p>
+          <p class="education-date">August 2021 - Present</p>
+          <div class="education-meta">
+            <span class="meta-item"><i class="fas fa-graduation-cap"></i> Expected Graduation: May 2026</span>
+            <span class="meta-item"><i class="fas fa-trophy"></i> Dean's List (3 Semesters)</span>
+            <span class="meta-item"><i class="fas fa-book"></i> GPA: 3.8/4.0</span>
+          </div>
+        </div>
+      </div>
+      <div class="education-description">
+        <p>Specialized in Artificial Intelligence and Web Development. Completed coursework in Advanced Algorithms, Machine Learning, and Cloud Computing.</p>
+      </div>
+    </div>
+
+    <!-- Education Item 2 -->
+    <div class="education-card">
+      <div class="education-header">
+        <div class="school-logo">
+          <img src="images/DRC_Logo.svg" alt="Don Ramon High School Logo">
+        </div>
+        <div class="education-details">
+          <h3>Science, Technology, Engineering, and Mathematics</h3>
+          <p class="institution">Don Ramon High School</p>
+          <p class="education-date">October 2020 - July 2022</p>
+          <div class="education-meta">
+            <span class="meta-item"><i class="fas fa-medal"></i> Graduated With Honors</span>
+            <span class="meta-item"><i class="fas fa-award"></i> Best Research Project Award</span>
+            <span class="meta-item"><i class="fas fa-star"></i> GPA: 94/100</span>
+          </div>
+        </div>
+      </div>
+      <div class="education-description">
+        <p>STEM strand graduate with focus on programming fundamentals. Led team that developed award-winning environmental monitoring system prototype.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
   <section id="skills">
     <h2>TECHNICAL SKILLS</h2>
     <div class="skills-grid">
