Change style for Work Experience

--- a/main.html
+++ b/main.html
@@ -135,72 +135,117 @@
   </section>
 
   <section id="experience">
-    <h2>WORK EXPERIENCE</h2>
-    <div class="experience-timeline">
-      <!-- Experience Item 1 -->
-      <div class="experience-item">
-        <div class="experience-content">
+  <h2>WORK EXPERIENCE</h2>
+  <div class="experience-container">
+    <!-- Experience Item 1 -->
+    <div class="experience-card">
+      <div class="experience-header">
+        <div class="company-logo">
+          <img src="images/forever-flawless-logo.png" alt="Forever Flawless Logo">
+        </div>
+        <div class="experience-details">
           <h3>MIS-IT Intern</h3>
           <p class="company">Forever Flawless Face and Body Center Inc.</p>
           <p class="experience-date">February 2025 — May 2025</p>
-          <ul>
-            <li class="lineHeightExp">Built and deployed the RSC InternHub, a time-tracking system using Next.js,
-              Node.js, Supabase, and PostgreSQL. Designed responsive UIs with Tailwind and Shadcn UI, integrated
-              role-based access, and email notifications. Maintained both modern (Netlify) and legacy (cPanel) systems, managed MySQL databases, and
-              supported Shopify backend operations. Contributed to IT support, including hardware/software
-              troubleshooting and CCTV training. Created mockups in Figma for a Ticketing System, authored user
-              documentation, and facilitated intern onboarding. Gained hands-on experience in deployment, reporting, and
-              internal ticketing using Zoho and Zenoti.</li>
-          </ul>
+          <div class="experience-meta">
+            <span class="meta-item"><i class="fas fa-map-marker-alt"></i> Pasig City</span>
+            <span class="meta-item"><i class="fas fa-clock"></i> Full-time</span>
+            <span class="meta-item"><i class="fas fa-laptop-code"></i> Web Development</span>
+          </div>
         </div>
       </div>
+      <div class="experience-description">
+        <ul>
+          <li>Built and deployed the RSC InternHub, a time-tracking system using Next.js, Node.js, Supabase, and PostgreSQL</li>
+          <li>Designed responsive UIs with Tailwind and Shadcn UI, integrated role-based access, and email notifications</li>
+          <li>Maintained both modern (Netlify) and legacy (cPanel) systems, managed MySQL databases</li>
+          <li>Supported Shopify backend operations and contributed to IT support including hardware/software troubleshooting</li>
+          <li>Created mockups in Figma for a Ticketing System and authored user documentation</li>
+          <li>Gained hands-on experience in deployment, reporting, and internal ticketing using Zoho and Zenoti</li>
+        </ul>
+      </div>
+    </div>
 
-      <!-- Experience Item 1 -->
-      <div class="experience-item">
-        <div class="experience-content">
+    <!-- Experience Item 2 -->
+    <div class="experience-card">
+      <div class="experience-header">
+        <div class="company-logo">
+          <img src="images/vpower-logo.png" alt="VPower Construction Logo">
+        </div>
+        <div class="experience-details">
           <h3>Freelance Web Developer</h3>
-          <p class="company">Delnard Cantor</p>
+          <p class="company">VPower Construction and Trading Inc.</p>
           <p class="experience-date">May 2025</p>
-          <ul>
-            <li class="lineHeightExp">Developed a corporate website for VPower Construction and Trading Inc. using
-              Next.js, Node.js, Supabase, and Tailwind CSS. Built a custom admin dashboard to manage projects, career
-              postings, and client inquiries, enhancing the company’s digital presence and operational efficiency.</li>
-          </ul>
+          <div class="experience-meta">
+            <span class="meta-item"><i class="fas fa-map-marker-alt"></i> Remote</span>
+            <span class="meta-item"><i class="fas fa-clock"></i> Contract</span>
+            <span class="meta-item"><i class="fas fa-laptop-code"></i> Full-Stack</span>
+          </div>
         </div>
       </div>
+      <div class="experience-description">
+        <ul>
+          <li>Developed a corporate website using Next.js, Node.js, Supabase, and Tailwind CSS</li>
+          <li>Built a custom admin dashboard to manage projects, career postings, and client inquiries</li>
+          <li>Enhanced the company's digital presence and operational efficiency</li>
+        </ul>
+      </div>
+    </div>
 
-      <!-- Experience Item 1 -->
-      <div class="experience-item">
-        <div class="experience-content">
-          <h3>SURVEY ENUMERATOR AND ENCODER</h3>
+    <!-- Experience Item 3 -->
+    <div class="experience-card">
+      <div class="experience-header">
+        <div class="company-logo">
+          <img src="images/pasig-gov-logo.png" alt="Pasig City Government Logo">
+        </div>
+        <div class="experience-details">
+          <h3>Survey Enumerator and Encoder</h3>
           <p class="company">SPES | City Government of Pasig</p>
           <p class="experience-date">December 2024</p>
-          <ul>
-            <li>Collected and verified data on Out-of-School Youth (OSY) through field surveys, focusing on demographic
-              profiling and needs assessment. Analyzed findings to support government programs and improve OSY outreach
-              initiatives.</li>
-          </ul>
+          <div class="experience-meta">
+            <span class="meta-item"><i class="fas fa-map-marker-alt"></i> Pasig City</span>
+            <span class="meta-item"><i class="fas fa-clock"></i> Temporary</span>
+            <span class="meta-item"><i class="fas fa-chart-bar"></i> Data Collection</span>
+          </div>
         </div>
       </div>
-
-      <!-- Experience Item 2 -->
-      <div class="experience-item">
-        <div class="experience-content">
-          <h3>WordPress Web Developer</h3>
-          <p class="company"></p>The Umonics Method</p>
-          <p class="experience-date">September 2024</p>
-          <ul>
-            <li class="lineHeightExp">Improved SEO rankings for the CourseMose domain by building and integrating
-              backlinks via WordPress. Configured WPForms to boost lead generation and user engagement. Updated and
-              validated training course
-              content across four countries, ensuring consistency and proper formatting.</li>
-          </ul>
-        </div>
+      <div class="experience-description">
+        <ul>
+          <li>Collected and verified data on Out-of-School Youth (OSY) through field surveys</li>
+          <li>Focused on demographic profiling and needs assessment</li>
+          <li>Analyzed findings to support government programs and improve OSY outreach initiatives</li>
+        </ul>
       </div>
-
-      <!-- Add more experience items as needed -->
     </div>
-  </section>
+
+    <!-- Experience Item 4 -->
+    <div class="experience-card">
+      <div class="experience-header">
+        <div class="company-logo">
+          <img src="images/umonics-logo.png" alt="The Umonics Method Logo">
+        </div>
+        <div class="experience-details">
+          <h3>WordPress Web Developer</h3>
+          <p class="company">The Umonics Method</p>
+          <p class="experience-date">September 2024</p>
+          <div class="experience-meta">
+            <span class="meta-item"><i class="fas fa-globe"></i> Remote</span>
+            <span class="meta-item"><i class="fas fa-clock"></i> Project-based</span>
+            <span class="meta-item"><i class="fas fa-search"></i> SEO</span>
+          </div>
+        </div>
+      </div>
+      <div class="experience-description">
+        <ul>
+          <li>Improved SEO rankings for the CourseMose domain by building and integrating backlinks via WordPress</li>
+          <li>Configured WPForms to boost lead generation and user engagement</li>
+          <li>Updated and validated training course content across four countries</li>
+          <li>Ensured content consistency and proper formatting</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
   <section id="projects">
     <h2>PROJECTS</h2>
